src/objects/Boards__c.object
<CustomObject>
    <fields>
        <fullName>Board_TF__c</fullName>
        <externalId>true</externalId>
        <label>Board_TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Board_Title__c</fullName>
        <label>Board Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Simulation_Notes_TF__c</fullName>
        <description>Roll Up to Calculate Number of Simulation Notes</description>
        <label>Number of Simulation Notes TF</label>
        <summaryForeignKey>Simulation_Note__c.Board__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Simulation__c</fullName>
        <label>Simulation</label>
        <referenceTo>Simulation__c</referenceTo>
        <relationshipLabel>Boards</relationshipLabel>
        <relationshipName>Boards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>